hphp/hack/test/typecheck/await_in_coroutine2.php
<?hh // strict

async function asyncFunction() {
  $a = coroutine function(Awaitable<string> $x) {
    $s = await $x;
  };
}
